--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "iconical-tab-nav": "file:..",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
-    "iconical-tab-nav": "file:.."
+    "react-syntax-highlighter": "^9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
