Update README with link to demo

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "iconical-tab-nav",
   "version": "1.0.0",
   "description": "A Tab Navigation component that can be either text or icon based",
-  "author": "kipurc",
+  "author": "kirstypeee",
   "license": "MIT",
-  "repository": "kipurc/iconical-tab-nav",
+  "repository": "kirstypeee/iconical-tab-nav",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
